--- a/frontend/src/components/success.css
+++ b/frontend/src/components/success.css
@@ -1,7 +1,3 @@
-body {
-  margin-top: 20px;
-  color: #484b51;
-}
 .text-secondary-d1 {
   color: #728299 !important;
 }
@@ -17,6 +13,20 @@ body {
   -ms-flex-align: center;
   align-items: center;
 }
+/* Tablet:768px. */
+@media (min-width: 768px) and (max-width: 991px) {
+  .pdf-container {
+    font-size: 16px;
+  }
+}
+
+/* Mobile :320px. */
+@media (max-width: 767px) {
+  .pdf-container {
+    font-size: 14px;
+  }
+}
+
 .page-title {
   padding: 0;
   margin: 0;
@@ -121,9 +131,45 @@ hr {
 .text-60 {
   font-size: 60% !important;
 }
+
+.text-80 {
+  font-size: 80% !important;
+}
+
+.text-40 {
+  font-size: 40% !important;
+}
 .text-grey-m1 {
   color: #7b7d81 !important;
 }
 .align-bottom {
   vertical-align: bottom !important;
+}
+
+@media print {
+  .print-source {
+    padding: 15px;
+    width: 100%;
+  }
+}
+
+thead {
+  background-color: #343a3f;
+  color: rgb(161, 159, 159);
+  border: hidden;
+  border-radius: 5px;
+}
+
+.last-row,
+.second-last-row {
+  border: hidden;
+}
+
+.highlighted-cell {
+  background-color: #444c52;
+  color: rgb(161, 159, 159);
+}
+
+.borderless {
+  border: hidden;
 }
