--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -98,6 +98,14 @@ main {
   flex: 2;
 }
 
+.passage-beam {
+  flex: 4;
+}
+
+.passage-last {
+  flex: 3;
+}
+
 .home {
   height: 90vh;
   width: 90vw;
